<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/details_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/repository_avatar_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/back_button_id"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/back_button_text_size"
            android:textColor="@color/colorWhite"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="@dimen/back_button_line_spacing_extra"
            tools:text="@string/back_button_text"
            android:layout_marginStart="@dimen/back_button_start_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/back_icon"
            android:drawablePadding="@dimen/back_button_drawable_padding"
            android:layout_marginTop="@dimen/back_button_top_margin" />
        <ImageView
            android:id="@+id/star_icon_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/repository_avatar_id"
            android:layout_marginStart="@dimen/star_icon_start_margin"
            android:layout_marginBottom="@dimen/star_icon_bottom_margin"/>
        <TextView
            android:id="@+id/number_of_stars_details_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/number_of_stars_details_text_view_text_size"
            android:textColor="@color/colorWhite"
            android:letterSpacing="-0.01"
            android:lineSpacingExtra="@dimen/number_of_stars_details_text_view_line_spacing_extra"
            android:layout_marginStart="@dimen/number_of_stars_details_text_view_start_margin"
            app:layout_constraintStart_toEndOf="@id/star_icon_id"
            app:layout_constraintTop_toTopOf="@id/star_icon_id"
            app:layout_constraintBottom_toBottomOf="@id/star_icon_id" />
        <TextView
            android:id="@+id/repository_author_name_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/repository_author_name_text_size"
            android:textColor="@color/colorWhite"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="@dimen/repository_author_name_line_spacing_extra"
            android:layout_marginBottom="@dimen/repository_author_name_bottom_margin"
            app:layout_constraintStart_toStartOf="@id/star_icon_id"
            app:layout_constraintBottom_toTopOf="@id/number_of_stars_details_text_view_id" />
        <TextView
            android:id="@+id/repo_by_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/repo_by_text_view_text_size"
            android:textColor="@color/colorWhite"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="@dimen/repo_by_text_view_line_spacing_extra"
            tools:text="@string/repo_by_text"
            android:layout_marginBottom="@dimen/repo_by_text_view_bottom_margin"
            app:layout_constraintStart_toStartOf="@id/star_icon_id"
            app:layout_constraintBottom_toTopOf="@id/repository_author_name_id" />
        <TextView
            android:id="@+id/repo_title_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/repo_title_text_view_text_size"
            android:textColor="@color/colorBlack"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="@dimen/repo_title_text_view_line_spacing_extra"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repository_avatar_id"
            android:layout_marginTop="@dimen/repo_title_text_view_top_margin"
            android:layout_marginStart="@dimen/repo_title_text_view_start_margin" />
        <Button
            android:id="@+id/view_online_button_id"
            android:layout_width="@dimen/view_online_button_width"
            android:layout_height="@dimen/view_online_button_height"
            android:background="@drawable/rounded_corners_shape"
            android:layout_marginEnd="@dimen/view_online_button_end_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/repo_title_text_view_id" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/view_online_text_view_text_size"
            android:textColor="@color/colorLightBlue"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="@dimen/view_online_text_view_line_spacing_extra"
            android:gravity="center_horizontal"
            tools:text="@string/view_online_button_text"
            android:elevation="@dimen/view_online_text_view_elevation"
            app:layout_constraintStart_toStartOf="@id/view_online_button_id"
            app:layout_constraintEnd_toEndOf="@id/view_online_button_id"
            app:layout_constraintTop_toTopOf="@id/view_online_button_id"
            app:layout_constraintBottom_toBottomOf="@id/view_online_button_id" />
        <TextView
            android:id="@+id/commits_history_text_view_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="@dimen/commits_history_text_view_text_size"
            android:textColor="@color/colorBlack"
            android:letterSpacing="0.02"
            android:lineSpacingExtra="@dimen/commits_history_text_view_line_spacing_extra"
            tools:text="@string/commits_history_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/repo_title_text_view_id"
            android:layout_marginStart="@dimen/commits_history_text_view_start_margin"
            android:layout_marginTop="@dimen/commits_history_text_view_top_margin" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/commits_recycler_view_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/commits_recycler_view_top_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commits_history_text_view_id"/>
        <Button
            android:id="@+id/share_repo_button_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/commits_recycler_view_id"
            android:layout_marginStart="@dimen/share_repo_button_start_end_margin"
            android:layout_marginEnd="@dimen/share_repo_button_start_end_margin"
            android:layout_marginTop="@dimen/share_repo_button_top_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="normal"
            android:textSize="@dimen/share_repo_button_text_text_size"
            android:textColor="@color/colorLightBlue"
            android:letterSpacing="-0.02"
            android:lineSpacingExtra="@dimen/share_repo_button_text_line_spacing_extra"
            android:gravity="center_horizontal"
            tools:text="@string/share_repo_button_text"
            android:elevation="@dimen/share_repo_button_text_elevation"
            app:layout_constraintStart_toStartOf="@id/share_repo_button_id"
            app:layout_constraintEnd_toEndOf="@id/share_repo_button_id"
            app:layout_constraintTop_toTopOf="@id/share_repo_button_id"
            app:layout_constraintBottom_toBottomOf="@id/share_repo_button_id"
            app:drawableStartCompat="@drawable/share_icon"
            android:drawablePadding="@dimen/share_repo_button_text_drawable_padding"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>